2012-07-16 Tsi YANG <tsi@in-cite.net>
	* Fix: Action new file on dataset single view.

2012-07-12 Tsi YANG <tsi@in-cite.net>
	* Refactor: Renamed conf[table][select_filegroup] to conf[table][dataset].
	* Feature: Implements single dataset actions "new"/"edit" and added Typoscript configuration.
	* Feature: Added config files template.
	* Feature: Added control to process datasets and files views.
	* Feature: Implements handleFormField hook for field filegroup on table tx_icsoddatastore_files.

2012-07-06 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented get_TCAFE_Admin_actions_data hook for table tx_icsoddatastore_files
	* Feature: Added Typoscript for tx_icsoddatastore_files list view calling from tx_icsoddatastore_filegroups

2012-07-05 Tsi YANG <tsi@in-cite.net>
	* Feature: Optimized TCA.
	* Feature: Added fe_users/tiers bidirectionnal relation. 

2012-06-29 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: Removed top download  hidden record.

2012-06-21 Emilie SAGNIEZ  <emilie@in-cite.net>
	* Fix: datastore pagination don't keep search params
	
2012-06-04 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented TCA FE Admin getRecord hook.
	* Feature: Added Typoscript configuration to render files list view from dataset single view.

2012-05-31 Tsi YANG <tsi@in-cite.net>
	* Refactor: Reworked hook condition.
	* Feature: Implemented partial hook to render list files on dataset single view.

2012-05-25 Tsi YANG <tsi@in-cite.net>
	* Feature: Implemented TCA FE Admin hook process befiore init plugin.
	* Feature: Implemented TCA FE Admin hook to process tx_icsoddatastore_files field md5.

2012-05-24 Tsi YANG <tsi@in-cite.net>
	* Fix: Updated from TCA FE Admin.
	* Update: Adjusted hook code because refactor ics_tcafe_admin.
	* Bug: Updated hook on file.
	* Feature: Implemented hook file deleteRecord.

2012-05-22 Tsi YANG <tsi@in-cite.net>
	* Feature: Adpated template for field entry.
	* Fearure: Added configuration to file upload folder.