@@ -3,23 +3,21 @@ plugin.tx_icstcafeadmin_pi1 {
 	table {
 		showHidden = 0
 	}
-	renderConf {
-		tx_icsoddatastore_licences.link.viewList {
-			setContentToCurrent = 1
-			typolink.parameter.current = 1
-		}
-		tx_icsoddatastore_licences.logo.viewList {
-			setContentToCurrent = 1
-			typolink.parameter.current = 1
-		}
-		actions {
-			edit < plugin.tx_icstcafeadmin_pi1.listActions.edit
+	optionList {
+		edit.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[showUid]={field:id}
+		edit.typolink.additionalParams.cObject.20 >
+		single.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[showUid]={field:id}
+		single.typolink.additionalParams.cObject.20 >
+		new.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[newUid]={field:newId}
+		new.typolink.additionalParams.cObject.20 >
+		singleDatasetOptionList {
+			edit < plugin.tx_icstcafeadmin_pi1.optionList.edit
 			edit{
 				cObject.data >
 				cObject.data = LLL:EXT:ics_od_datastore/hook/locallang.xml:action_edit
 				outerWrap = <p class="dataset_menu">|</p>
 			}
-			new < plugin.tx_icstcafeadmin_pi1.listActions.new
+			new < plugin.tx_icstcafeadmin_pi1.optionList.new
 			new {
 				cObject.data >
 				cObject.data = LLL:EXT:ics_od_datastore/hook/locallang.xml:action_new
@@ -108,51 +106,12 @@ tx_icsoddatastore_files.config.tx_icstcafeadmin_pi1 {
 	table.tablename = tx_icsoddatastore_files
 
 	template = typo3conf/ext/ics_od_datastore/res/template_TCAFE_Admin_files.html
-
-	listActions {		
-		edit {
-			cObject = TEXT
-			cObject {
-				data = LLL:EXT:ics_tcafe_admin/pi1/locallang.xml:action_edit
-			}
-			typolink {
-				parameter.data = tsfe:id
-				parameter.override.field = PIDeditItem
-				additionalParams.cObject = COA
-				additionalParams.cObject {
-					10 = TEXT
-					10.value = &tx_icstcafeadmin_pi1[mode]=EDIT&tx_icstcafeadmin_pi1[table]={field:table}&tx_icstcafeadmin_pi1[showUid]={field:id}
-					20 = TEXT
-					20 {
-						if.isTrue.field = withDataEditItem
-						value = &tx_icstcafeadmin_pi1[fields]={field:fields}
-					}
-				}
-				additionalParams.insertData = 1
-			}
-		}
-		
-		new {
-			cObject = TEXT
-			cObject {
-				data = LLL:EXT:ics_tcafe_admin/pi1/locallang.xml:action_new
-			}
-			typolink {
-				parameter.data = tsfe:id
-				parameter.override.field = PIDnewItem
-				additionalParams.cObject = COA
-				additionalParams.cObject {
-					10 = TEXT
-					10.value = &tx_icstcafeadmin_pi1[mode]=NEW&tx_icstcafeadmin_pi1[table]={field:table}&tx_icstcafeadmin_pi1[newUid]={field:newId}&tx_icstcafeadmin_pi1[dataset]={field:dataset}
-					20 = TEXT
-					20 {
-						if.isTrue.field = withDataNewItem
-						value = &tx_icstcafeadmin_pi1[fields]={field:fields}
-					}
-				}
-
-				additionalParams.insertData = 1
-			}
-		}
-	}	
+	optionList {
+		edit.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[showUid]={field:id}
+		edit.typolink.additionalParams.cObject.20 >
+		single.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[showUid]={field:id}
+		single.typolink.additionalParams.cObject.20 >
+		new.typolink.additionalParams.cObject.10.value = &tx_icstcafeadmin_pi1[newUid]={field:newId}
+		new.typolink.additionalParams.cObject.20 >
+	}
 }
