@@ -42,6 +42,7 @@
 	<div class="###PREFIXID###_listEmpty">
 		###TEXT_LISTEMPTY###
 	</div>
+	<p class="action_new">###NEW###</p>
 <!-- ###TEMPLATE_RESULTS_LIST_EMPTY### end-->
 
 
