@@ -1,3 +1,7 @@
+2012-07-20 Tsi YANG <tsi@in-cite.net>
+	* Feature: Added backlink configuration.
+	* Feature: Added actions configuration.
+
 2012-07-16 Tsi YANG <tsi@in-cite.net>
 	* Fix: Action new file on dataset single view.
 
